# coursework_postgres

./: README.md  main.py  pyproject.toml  queries.sql
db_classes/: builder.py  manager.py
employees/: class_hh.py
site_class/: abs_class.py  class_hh.py
utils/: user_input.py
vacancies/: class_vacancy.py
